--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,17 +1,33 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>Olympic App</title>
 
 	<!-- css -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 	<!-- header -->
-	header#site-header>
+	<header id='site-header'>
+		<div class="navbar navbar-custom">
+			<div class="container">
+				<div class="navbar-header">
+					<a href="/" class="navbar-brand">Olympics Event</a>
+				</div>
+			</div>
+		</div>
+	</header>
 	<!-- main -->
+	<main id="site-main">
+		<div class="container">
+			<%- body %>
+		</div>
+	</main>
 	<!-- footer -->
-</body> 
+	<footer id="site-footer">
+		Copyright &copy; 2023 Olympics
+	</footer>
+</body>
 </html>
