--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,10 @@
 				<div class="navbar-header">
 					<a href="/" class="navbar-brand">Olympics Event</a>
 				</div>
+				<ul class="navbar">
+					<li><a href="/events" >Events</a></li>
+					<li><a href="/events/create" >Create an Event</a></li>
+				</ul>
 			</div>
 		</div>
 	</header>
