--- a/views/pages/create.ejs
+++ b/views/pages/create.ejs
@@ -10,6 +10,7 @@
 				<input type="text" name="name" class="form-control">
 			</div>
 			<div class="form-group">
+				<label>Description</label>
 				<textarea name="description" rows="5" class="form-control"></textarea>
 			</div>
 			<div class="form-group">
