--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,11 +15,9 @@
 			<div class="container">
 				<div class="navbar-header">
 					<a href="/" class="navbar-brand">Olympics Event</a>
+					<a href="/events" class="options">Events</a>
+					<a href="/events/create" class="options">Create an Event</a>
 				</div>
-				<ul class="navbar">
-					<li><a href="/events" >Events</a></li>
-					<li><a href="/events/create" >Create an Event</a></li>
-				</ul>
 			</div>
 		</div>
 	</header>
