--- a/views/pages/edit.ejs
+++ b/views/pages/edit.ejs
@@ -1,5 +1,5 @@
 <div class='jumbotron text-center'>
-	<h1><%= event.name %></h1>	
+	<h1>Edit <%= event.name %></h1>	
 </div>
 
 <div class="row">
@@ -13,18 +13,18 @@
 			</div>
 		<%	} %>
 
-		<form action="/events/create" method="POST">
+		<form action="/events/<%= event.slug %>" method="POST">
 			<div class="form-group">
 				<label>Name</label>
-				<input type="text" name="name" class="form-control">
+				<input type="text" name="name" class="form-control" value="<%= event.name %>">
 			</div>
 			<div class="form-group">
 				<label>Description</label>
-				<textarea name="description" rows="5" class="form-control"></textarea>
+				<textarea name="description" rows="5" class="form-control"><%= event.description %></textarea>
 			</div>
 			<div class="form-group">
 				<button type="submit" class="btn btn-success btn-lg">
-					Create
+					Update
 				</button>
 			</div>
 		</form>
